php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #41865 fputcsv(): 2nd parameter is not optional
Submitted: 2007-07-01 21:20 UTC Modified: 2007-07-01 21:28 UTC
From: machour at gmail dot com Assigned:
Status: Closed Package: Reproducible crash
PHP Version: 5.2.3 OS: Linux
Private report: No CVE-ID: None
 [2007-07-01 21:20 UTC] machour at gmail dot com
Description:
------------
Hi,

The $fields parameter should be made mandatory on fputcsv() for two reason:
  1. Calling fputcsv($fp) doesn't make sense (to me at least)
  2. Calling fputcsv($fp) segfaults

Please change the C source to look like
     if (zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "ra|ss",
instead of 
     if (zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "r|ass",

(/ext/standard/file.c:1999 in HEAD)


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-07-01 21:28 UTC] sniper@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Nice catch. :)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 03:00:01 2026 UTC