- Fixed bug #41865 (fputcsv(): 2nd parameter is not optional)